# happy-site

./: .gitignore  Procfile  README.md  color-script.js  happy-site.cabal  happy.db
.stack-work/install/x86_64-osx/lts-8.18/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  MissingH-1.4.0.1-DyyJvfCR4dPGfXtWKVxn75  aeson-1.0.2.1-7SRc0E2ovMGDtD3x4FKjWQ  aeson-pretty-0.8.4-3a5GlcfVry737UHo5Du8Wk  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-DRMYON11vLW10yp1r3HlfE  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  blaze-html-0.8.1.3-4x5sR7CihaZBuBa398ibiy  blaze-markup-0.7.1.1-7tIWNv8iALFJhJ4kVxNmNT  blaze-textual-0.2.1.0-GUQiYWWxIi0L6FRzgIE5JF  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.10-7eVVX59t93gCl3XctAmuil  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  cookie-0.4.2.1-K68NuFIZ07nEstxwB6c3aL  cryptonite-0.21-5d9Fz1EYswtH1x1N2J0tu3  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  direct-sqlite-2.3.19-HHlUsN8cUcIK9krg9k4o1U  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  easy-file-0.2.1-rguMBNaECxLikt4CCDx0D  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  expiring-cache-map-0.0.6.1-1aXy31j5MGyEPQ46mJ65m  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.10-AASpkRsupvWAQEpNM5DQI  (+55 more)
src/: HtmlGen.hs  Main.hs  SqlTable.hs
static/css/: screen.css
