name:                happy-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arcticmatt/happy-site#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Lim
maintainer:          mlimcollege@gmail.com
copyright:           Copyright: (c) 2017 Matt Lim
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable happy-site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       HtmlGen
                     , SqlTable
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , lucid
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , MissingH
                     , random
                     , transformers
                     , wai-middleware-static
